# contextforge

./: .contextforge.toml  AGENTS.md  PLAN.md  README.md  pyproject.toml
contextforge/: __init__.py  cli.py  mcp_server.py
contextforge/adapters/: __init__.py  altimate_code.py  base.py  claude_code.py  claude_desktop.py  codex.py  gemini.py  registry.py
contextforge/core/: analytics.py  compactor.py  db.py  injector.py  scanner.py  summarizer.py  token_analyzer.py
contextforge/models/: __init__.py  config.py  session.py
contextforge/tui/: app.py  clipboard.py  styles.tcss
contextforge/tui/widgets/: session_detail.py  session_table.py  stats_panel.py  status_bar.py  tokens_panel.py  transfer_panel.py
contextforge/utils/: display.py  tokens.py
src/contextforge/: __init__.py
tests/: conftest.py  test_mcp_server.py
tests/adapters/: test_claude_code.py
tests/core/: test_compactor.py  test_db.py  test_injector.py  test_summarizer.py  test_token_analyzer.py
tests/fixtures/: claude_session_sample.jsonl
