[project]
name = "contextforge"
version = "0.1.0"
description = "Session manager and context bridge for agentic CLI tools"
readme = "README.md"
authors = [
    { name = "emmver", email = "emmvereroudakis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.89.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sqlite-utils>=3.39",
    "textual>=8.2.2",
    "tiktoken>=0.12.0",
    "typer>=0.24.1",
]

[project.scripts]
cf = "contextforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
