[project]
name = "context-forge-cli"
version = "0.2.4"
description = "Session manager and context bridge for agentic CLI tools"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "emmver", email = "emmvereroudakis@gmail.com" }
]
keywords = ["claude", "codex", "ai", "context", "sessions", "tui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.89.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sqlite-utils>=3.39",
    "textual>=8.2.2",
    "tiktoken>=0.12.0",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/emmver/contextforge"
Repository = "https://github.com/emmver/contextforge"
"Bug Tracker" = "https://github.com/emmver/contextforge/issues"

[project.scripts]
cf = "contextforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextforge"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
